# PrepMate

backend/: .env.sample  .gitignore  main.py  pyproject.toml
backend/src/controllers/: fileToChecklist.py
backend/src/db/: database.py
backend/src/functions/: gemini_schedule.py  pdf_to_text_generator.py
backend/src/models/: __init__.py  uploadFileModel.py
backend/src/routes/: fileRoute.py
frontend/: package-lock.json
frontend/src/: App.jsx
frontend/src/components/: CreateQuiz.jsx  Fileuploader.jsx
prepmate1/: index.html  package-lock.json  package.json
prepmate1/src/: App.jsx  index.css
prepmate1/src/components/: Navbar.jsx  container.jsx
prepmate1/src/data/: parsedData.js
prepmate1/src/pages/: CircularProgress.jsx  Dashboard.jsx  Home.jsx  ImportantQuestions.jsx  Profile.jsx  ProtectedRoute.jsx  Quiz.jsx  TopicAction.jsx  Topics.jsx  Upload.jsx  processing.jsx
prepmate1/src/pages/auth/: AuthLayout.jsx  Login.jsx  Signup.jsx
