[project]
name = "backend"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "aiofiles>=24.1.0",
    "alembic>=1.17.1",
    "asyncpg>=0.30.0",
    "dotenv>=0.9.9",
    "easyocr>=1.7.2",
    "fastapi>=0.118.0",
    "google-generativeai>=0.8.5",
    "psycopg2-binary>=2.9.11",
    "pymupdf>=1.26.4",
    "pytesseract>=0.3.13",
    "python-dotenv>=1.1.1",
    "python-multipart>=0.0.20",
    "sqlalchemy>=2.0.44",
    "uvicorn>=0.37.0",
]
